# e3sm-comms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
conda/: dev.yml
e3sm_comms/: utils.py
e3sm_comms/e3sm_org_reviewer/: main.py
e3sm_comms/exported_xml_reviewer/: main.py
e3sm_comms/html_reviewer/: main.py
e3sm_comms/newsletter_reviewer/: main.py
e3sm_comms/page_reviewer/: README.md  confluence_page_reviewer.py  utils_base.py  utils_newsletter_reviewer.py  utils_resource_reviewer.py  utils_website_reviewer.py
e3sm_comms/resource_reviewer/: main.py
e3sm_comms/term_reviewer/: main.py
e3sm_comms/tree_reviewer/: main.py
e3sm_comms/video_reviewer/: main.py
e3sm_comms/website_reviewer/: main.py
examples/: review_terms.bash  review_xml.bash
